# ComputerVision

ComputerVision/: a.out  map_test1  map_test1.cpp  reference  reference.cpp
hw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw  hw.cpp
lab1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab1  lab1.cpp
lab1_HSV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab1_HSV.cpp
lab2/: CMakeCache.txt  CMakeLists.txt  D3300_output.txt  Huawei-Pietro_output.txt  Makefile  cmake_install.cmake  lab2  lab2.cpp
lab2/Checkerboard_12x8_2cm_A4/: Checkerboard_12x8_2cm_A4.odg
lab3/lab3_data_code/code/: CMakeCache.txt  Makefile  cmake_install.cmake  filter  filter.cpp  filter.h  lab3  lab3.cpp
lab3/opencv_solution/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab3  lab3.cpp
lab5/: lab  lab.cpp  panoramic_utils.h
